baackend:feat: new route for payment, modifie product scheama
